# Tapestry-Loom

./: .gitignore  .gitmodules  Cargo.toml  Getting Started.md  Manual.md  README.md  build.rs  build.sh  client.ts  ideas.md  llama-server.sh  main.ts  manifest.json  model colors.md  new plans.txt  package-lock.json  package.json  run.sh  styles.css  test.sh  tsconfig.json  view.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/example-weaves/: playground angel.tapestry  write good.tapestry
example-weaves/: library.tapestry  welcome.tapestry
frontend/: Cargo.toml  index.html  package-lock.json  package.json
frontend/assets/: manifest.json  sw.js
frontend/src/: main.rs  main.ts  weave.ts
lib/: Cargo.toml  README.md
lib/src/: content.rs  document.rs  format.rs  lib.rs
lib/src/document/: content.rs  mod.rs  update.rs
lib/src/document/content/: mod.rs
lib/src/document/update/: mod.rs
lib/tests/: document.rs
loomkit/: Cargo.toml  README.md
loomkit/src/: lib.rs
migration-assistant/: Cargo.toml  README.md
migration-assistant/src/: main.rs
migration-assistant/src/exoloom/: mod.rs
migration-assistant/src/loomsidian/: mod.rs
migration-assistant/src/obsidian_tapestry/: mod.rs
migration-assistant/src/pyloom/: mod.rs
obsidian-migration/: Cargo.toml
obsidian-migration/src/: convert.js  main.rs
old/: .eslintrc  .gitignore  manifest.json  package.json  styles.css  tsconfig.json
old/src/: main.ts  settings.ts
old/src/view/: graph.ts
src/: client.ts  commands.ts  common.ts  document.ts  editor.rs  files.rs  main.rs  main.ts  manual.rs  settings.rs  settings.ts  view.ts  weave.rs  weave.ts
src/editor/: canvas.rs  graph.rs  lists.rs  menus.rs  mod.rs  shared.rs  textedit.rs
src/editor/shared/: layout.rs  mod.rs  seriate.rs  weave.rs
src/files/: mod.rs  tree.rs
src/settings/: inference.rs  mod.rs  notices.rs  shortcuts.rs
src/settings/inference/: mod.rs  openai.rs  polyparser.rs  seriate.rs  shared.rs
src/view/: commands.ts  common.ts  editor.ts  graph.ts  list.ts  primary.ts  tree.ts  treelist.ts
src/weave/: common.ts  format-v0.ts  mod.rs  socket.rs
static/: index.html
tapestry-glue/: Cargo.toml
tapestry-tokenize/: Cargo.toml  README.md
tapestry-tokenize/src/: default-models.toml  default-rocket.toml  main.rs
tapestry-weave/: Cargo.toml  README.md
tapestry-weave/src/: hashers.rs  lib.rs  treeless.rs  v0.rs  v1.rs  wrappers.rs
wasm/: Cargo.toml  README.md
weave/: Cargo.toml  README.md  TODO.md
weave/.cargo/: config.toml
weave/src/: format.rs  lib.rs  wasm.rs
weave/src/document/: mod.rs  tests.rs
weave/src/document/content/: mod.rs  tests.rs
weave/src/document/update/: mod.rs  tests.rs
weave/src/weave/: format.rs  mod.rs
