[package]
name = "tapestry-loom"
version = "0.0.0"
authors = [
	"transkatgirl",
]
license = "AGPL-3.0-or-later"
description = "An IDE for working with base model LLMs."
edition = "2024"

[dependencies]
tapestry-weave = { path = "universal-weave/tapestry-weave", features = [
	"serde",
] }
eframe = { version = "0.33.2", features = [
	"accesskit",
	"persistence",
] }
env_logger = { version = "0.11.8", features = [
	"auto-color",
	"humantime",
] }
log = { version = "0.4.28", features = [
	"release_max_level_debug",
] }
mimalloc = { version = "0.1.48", features = [
	"v3",
] }
serde = { version = "1.0.228", features = [
	"derive",
] }
serde_json = { version = "1.0.145", features = [
	"preserve_order",
] }
ron = { version = "0.12.0", features = [
	"indexmap",
	"integer128",
	"unicode-segmentation",
] }
reqwest = { version = "0.12", features = [
	"json",
	"gzip",
	"brotli",
	"zstd",
	"deflate",
] }
parking_lot = { version = "0.12.5", features = [
	"serde",
] }
anyhow = "1.0.100"
dirs-next = "2.0.0"
egui_tiles = "0.14.0"
egui-notify = "0.21.0"
threadpool = "1.8.1"
tokio = { version = "1.48.0", features = [
	"full",
] }
walkdir = "2.5.0"
unicode-segmentation = "1.12.0"
trash = "5.2.5"
poll-promise = { version = "0.3.0", features = [
	"tokio",
] }
ctrlc = "3.5.1"
chrono = "0.4.42"
egui-keybind = { version = "0.8.0", features = [
	"serde",
] }
flagset = { version = "0.4.7", features = [
	"std",
] }
bytes = "1.11.0"
font-kit = "0.14.3"
egui_solarized = "0.33.0"
egui_virtual_list = "0.9.0"
rust-sugiyama = "0.4.0"
#llama_cpp = "0.3.2"
#egui_dnd = "0.14.0"

[profile.dev]
opt-level = 3
