[package]
name = "tapestry-weave"
version = "0.1.0"
authors = [
	"transkatgirl",
]
edition = "2024"

[dependencies]
serde = { version = "1.0", features = [
	"derive",
] }
rmp-serde = "1.3.0"
lz4_flex = { version = "0.11", default-features = false, features = [
	"std",
	"frame",
] }
base64 = "0.22.1"
ulid = { version = "=1.2.1", features = [
	"serde",
] }
dissimilar = "1.0"
rust_decimal = "1.37.1"
thiserror = "2.0.12"
serde_bytes = "0.11.17"
