[package]
name = "tapestry-loomkit"
version = "0.1.0"
authors = [
	"transkatgirl",
]
license = "LGPL-3.0-or-later"
description = "A WASM library for building Loom implementations on top of tapestry-weave."
repository = "https://github.com/transkatgirl/Tapestry-Loom"
edition = "2024"

[lib]
crate-type = [
	"cdylib",
	"rlib",
]

[dependencies]
serde = { version = "1.0", features = [
	"derive",
] }
ulid = { version = "=1.2.1", features = [
	"serde",
] }
base64 = "0.22.1"
tapestry-weave = { path = "../weave" }
getrandom = { version = "0.2", features = [
	"js",
] }
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = { version = "0.2.84" }
serde-wasm-bindgen = { version = "0.6.5" }
gray_matter = { version = "0.2", default-features = false, features = [
	"yaml",
] }
ml-distance = "1.0.1"
travelling_salesman = "1.1.22"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
codegen-units = 1
lto           = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [ '-O4' ]
