[package]
name = "tapestry-loom-migration-assistant"
version = "0.4.1"
authors = [
	"transkatgirl",
]
homepage = "https://github.com/transkatgirl/Tapestry-Loom"
license = "Unlicense"
description = "A tool for converting weaves from other Loom implementations into the Tapestry Loom weave format."
edition = "2024"

[dependencies]
base64 = "0.22.1"
miniz_oxide = "0.9.0"
frontmatter = "0.4.0"
boa_engine = "0.21.0"
tapestry-weave = { path = "../tapestry-weave" }
clap = { version = "4.5.55", features = [
	"derive",
] }
anyhow = "1.0.100"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = [
	"derive",
] }
serde_json = { version = "1.0.149", features = [
	"preserve_order",
] }
chrono = { version = "0.4.43", features = [
	"serde",
] }
uuid = { version = "1.20.0", features = [
	"serde",
] }
