[package]
name    = "tapestry-glue"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = [
	"cdylib",
	"rlib",
]

[dependencies]
universal-weave = { path = "../universal-weave" }
tapestry-weave = { path = "../universal-weave/tapestry-weave" }
serde = { version = "1.0.228", features = [
	"derive",
] }
serde_json = { version = "1.0.145", features = [
	"indexmap",
] }
wasm-bindgen = { version = "0.2.105", features = [
	"enable-interning",
] }
wasm-bindgen-futures = "0.4.55"
gloo-utils = { version = "0.2.0", features = [
	"serde",
] }
silkenweb = "0.10.0"
futures-signals = "0.3.34"
getrandom = { version = "0.3.4", features = [
	"wasm_js",
] }
rand = "0.9.2"

[target.wasm32-unknown-unknown]
rustflags = [
	'--cfg',
	'getrandom_backend="wasm_js"',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
strip = "symbols"
panic = "abort"
