[package]
name = "tapestry-weave"
version = "0.0.0"
authors = [
	"transkatgirl",
]
license = "Unlicense"
description = "An implementation of Tapestry Loom's document format."
edition = "2024"

[dependencies]
contracts = "0.6.7"
rkyv = "0.8.13"
universal-weave = { path = "../universal-weave", features = [
	"legacy", # v0
	"serde",  # v0
] }
foldhash = "0.2.0"

# v0
ulid = { version = "1.2.1", features = [
	"serde",
] }
serde_json = { version = "1.0.145", features = [
	"preserve_order",
	"arbitrary_precision",
] }
base64 = "0.22.1"

# v1+
chrono = { git = "https://github.com/transkatgirl/chrono", features = [
	#"rkyv-64",
	#"rkyv-validation",
	"rkyv",
	"rkyv-bytecheck",
] }
