[package]
name = "tapestry-weave-wasm"
version = "0.1.0"
authors = [
	"transkatgirl",
]
edition = "2024"

[lib]
crate-type = [
	"cdylib",
	"rlib",
]

[dependencies]
serde = { version = "1.0", features = [
	"derive",
] }
tapestry-weave = { path = "../lib" }
getrandom = { version = "=0.3.1", features = [
	"wasm_js",
] }
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = { version = "0.2.84" }
serde-wasm-bindgen = { version = "0.6.5" }
gray_matter = { version = "0.2", default-features = false, features = [
	"yaml",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
codegen-units = 1
lto           = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [ '-O4' ]
