[package]
name = "tapestry-weave"
version = "0.1.0"
authors = [
	"transkatgirl",
]
edition = "2024"

[lib]
crate-type = [
	"cdylib",
	"rlib",
]

[features]
default = [
	"console_error_panic_hook",
]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = [
	"derive",
] }
rmp-serde = "1.3.0"
serde-wasm-bindgen = "0.6.5"
gray_matter = { version = "0.2", default-features = false, features = [
	"yaml",
] }
lz4_flex = { version = "0.11", default-features = false, features = [
	"std",
	"frame",
] }
base64 = "0.22.1"
ulid = { version = "1.2.1", default-features = false }
web-time = "1"
rand = { version = "0.9" }
getrandom = { version = "0.3.1", features = [
	"wasm_js",
] }
dissimilar = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
codegen-units = 1
lto           = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [ '-O4' ]
