[package]
name = "tapestry-weave"
version = "0.1.0"
authors = [
	"transkatgirl",
]
edition = "2024"

[lib]
crate-type = [
	"cdylib",
	"rlib",
]

[dependencies]
serde = { version = "1.0", features = [
	"derive",
] }
rmp-serde = "1.3.0"
gray_matter = { version = "0.2", default-features = false, features = [
	"yaml",
] }
lz4_flex = { version = "0.11", default-features = false, features = [
	"std",
	"frame",
] }
base64 = "0.22.1"
ulid = { version = "=1.2.1", features = [
	"serde",
] }
dissimilar = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.3.1", features = [
	"wasm_js",
] }
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = { version = "0.2.84" }
serde-wasm-bindgen = { version = "0.6.5" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
codegen-units = 1
lto           = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [ '-O4' ]
