[package]
name = "tapestry-weave"
version = "0.1.0"
authors = [
	"transkatgirl",
]
license = "MPL-2.0"
description = "An implementation of Tapestry Loom's \"Weave\" document format."
repository = "https://github.com/transkatgirl/Tapestry-Loom"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = [
	"derive",
] }
rmp-serde = "1.3.0"
lz4_flex = { version = "0.11", default-features = false, features = [
	"std",
	"frame",
] }
ulid = { version = "=1.2.1", features = [
	"serde",
] }
similar = "2.7.0"
thiserror = "2.0.12"
serde_bytes = "0.11.17"
bytes = { version = "1.10.1", features = [
	"serde",
] }

[target.wasm32-unknown-unknown.dependencies]
similar = { version = "2.7.0", features = [
	"wasm32_web_time",
] }
getrandom = { version = "=0.3.1", features = [
	"wasm_js",
] }
